[package]
name = "nmp-app-podcast"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Per-app Podcast glue. Owns the kernel composition root and surfaces projected state to native shells."

[lib]
name = "nmp_app_podcast"
# Static lib so the iOS shell can link the app-owned UniFFI facade and the
# remaining `nmp_app_podcast_*` C ABI in one archive. Doctrine D0 forbids
# `nmp-core` from carrying podcast-domain nouns, so this crate remains the
# composition root for podcast-domain bridge symbols.
#
# `cdylib` is added for M2.F: cargo-ndk packs the same crate as a
# `libnmp_app_podcast.so` for Android. Same cargo binary, second platform.
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
# Persistent local cache / publish-intent ledger for offline-first Podcast.
lmdb-backend = ["nmp-core/lmdb-backend"]
# Headless scenario test binary: real HTTP via reqwest, temp dirs via tempfile.
# tokio-tungstenite and futures-util are now non-optional (production social
# graph relay subscriptions use them). Gated deps here are only the test-only
# build utilities; the relay client is a production dependency.
headless = ["dep:tempfile", "nmp-core/test-support", "nmp-native-runtime/test-support"]
# Build the `uniffi-bindgen` binary to regenerate the `PodcastApp` Swift/
# Kotlin bindings (wave 1 of the UniFFI-facade migration,
# podcast-player#681 follow-on). NOT in `default` — keeps cold builds out of
# the CI watchdog budget. Mirrors NMP's own `nmp-uniffi` crate's `bindgen`
# feature (uniffi 0.29 puts `uniffi_bindgen_main` behind the `cli` feature).
# Usage: see `ci/check-uniffi-bindings-drift.sh`.
bindgen = ["uniffi/cli"]

[[bin]]
name = "headless"
path = "src/bin/headless/main.rs"
required-features = ["headless"]

[[bin]]
name = "swift-codegen"
path = "src/bin/swift_codegen/main.rs"
# No required-features: the codegen binary uses only std, no crate deps.

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"
required-features = ["bindgen"]

[dependencies]
async-trait = "0.1"
log = "0.4"
# default-features = false drops reqwest's `default-tls` (native-tls → openssl-sys),
# which cannot cross-compile to Android. The crate already standardizes on rustls
# (see tokio-tungstenite + rig-core below); we re-add the other default features
# (charset/http2/system-proxy/macos-system-configuration) so non-TLS behavior is unchanged.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls", "charset", "http2", "system-proxy", "macos-system-configuration"] }
tempfile = { version = "3", optional = true }
# WebSocket client used by the production social-graph relay subscriptions
# (FetchContacts → kind:3 + kind:0) and by the headless relay_client.
# Non-optional so the iOS library also compiles with real relay support.
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
nmp-core = { workspace = true }
# A1 (#681): `nmp-native-runtime` owns the `NmpApp` handle + lifecycle
# (successor to the deleted `nmp-ffi`). This crate builds its OWN UniFFI
# facade object directly on top (mirrors apps/nmp-gallery/crates/nmp-app-gallery
# and 29er's crates/nmp-app-29er in the NMP repo) rather than depending on the
# generic `nmp-uniffi` base-object crate.
nmp-native-runtime = { workspace = true, features = ["external-signer", "signer-broker"] }
nmp-uniffi-support = { workspace = true }
nmp-nostr-id = { workspace = true }
uniffi = { workspace = true }
# ADR-0069 composition root: reusable substrate floor (routing, mailbox/
# profile/contact caches, parsers, publish resolver, coverage gate, NIP-77
# sync). Replaces the deleted `nmp-defaults::register_defaults` preset —
# apps now install `nmp_substrate::install(...)` plus explicit per-crate
# `register_*` calls (see ffi/register.rs).
nmp-substrate = { workspace = true }
nmp-ownership = { workspace = true }
# pablof7z/nmp-feedback#3 tracks restoring feedback-thread integration
# after `nmp-feedback` is rebuilt on the current NMP facade shape.
# — see the workspace Cargo.toml pin-discipline comment.
# NIP-02 reactive follow-list projection + ActiveFollowSet trust-gate predicate.
# Listed explicitly so social_handler.rs can import FollowListProjection and
# ActiveFollowSet (D11 — single door).
nmp-nip02 = { workspace = true }
nmp-nip50 = { workspace = true }
# Explicit protocol installers formerly bundled by the deleted
# `nmp-defaults::register_defaults` preset (repost/quote-repost, react/
# unreact, DM send + relay-list publish, outbox relay-list publish routing,
# bookmarks). See ffi/register.rs for the explicit call sites.
nmp-nip18 = { workspace = true }
nmp-nip25 = { workspace = true }
nmp-nip17 = { workspace = true }
nmp-nip51 = { workspace = true }
nmp-router = { workspace = true }
nmp-wot = { workspace = true }
# Subscription planner (direct dep for InterestId/LogicalInterest/etc.).
# nmp-core no longer re-exports the planner facade (#1608); external callers
# depend on nmp-planner directly.
nmp-planner = { workspace = true }
# BUD-02 blob upload action (`nmp.blossom.upload`). D13/D0 — Rust owns the
# full Build → Sign → Transport pipeline; Swift dispatches + reads the
# projected result. Same git rev as the other nmp-* deps (workspace pin).
nmp-blossom = { workspace = true }
# `nostr` reconstructs typed `Event` / `Keys` / `PublicKey` / `RelayUrl`
# values from C-ABI JSON. Pinned to 0.44.
nostr = { version = "0.44", default-features = false, features = ["std"] }
# Domain types + projections live in `podcast-core`; the per-app FFI crate
# consumes them when composing the snapshot. M2.A wires the dep so later
# milestones can publish actions and observe projections without churn.
podcast-core = { path = "../podcast-core" }
# Agent-chat domain (conversations, approvals, tasks, memory). M7.A wires
# the dep so the FFI snapshot can surface `agent: ConversationsSnapshot`
# alongside `now_playing` / `downloads`; the kernel-side action modules
# arrive in M7.B.
podcast-agent-core = { path = "../podcast-agent-core" }
# M5 — re-exports the canonical `HttpRequest` / `HttpResult` / `HttpMethod`
# wire types so `capability::http` mirrors the `capability::audio` /
# `capability::download` layout. The types themselves live in
# `podcast-feeds` (the lower-level consumer); routing them through this
# re-export keeps the per-app capability surface uniform.
podcast-feeds = { path = "../podcast-feeds" }
# Transcript parsers (VTT / SRT / Podcasting 2.0 JSON). PR 14 wires the
# dep so the `podcast.fetch_transcript` action can pull publisher transcript
# bytes via the HTTP capability, parse them with these pure-Rust parsers,
# and store the plain text on a per-episode slot in `PodcastStore`.
podcast-transcripts = { path = "../podcast-transcripts" }
# M5.3 — RAG/knowledge chunk store. `KnowledgeAction::IndexEpisode` chunks
# the Rust-stored transcript into this in-memory store and
# `KnowledgeAction::Search` does BM25-style substring matching over the
# resulting chunks (in addition to title/description). Real embedding
# search is a follow-up; this baseline needs no STT timing or vectors.
podcast-knowledge = { path = "../podcast-knowledge" }
# NIP-F4 (`kind:10154`) parser + action constants for Nostr discovery.
# Discovery + publish layer. NIP-F4 tag builders (`podcast_to_show_tags`,
# `episode_to_episode_tags`, `show_content`) and kind constants
# (`KIND_SHOW`, `KIND_EPISODE`, `KIND_AUTHOR_CLAIM`) live here. The
# `podcast.publish` host-op handler reaches for the build layer when
# constructing per-podcast NIP-F4 events (features #27/#28).
podcast-discovery = { path = "../podcast-discovery" }
rig-core = { version = "0.37", default-features = false, features = ["derive", "reqwest", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1", features = ["derive"] }
url = { version = "2.0" }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
getrandom = "0.2"
# sha2 + base64 are used by the LLM and image-generation paths (BYOK JWT
# signing, elevenlabs audio encoding, image b64). The Blossom upload no
# longer needs them here — that pipeline now lives in nmp-blossom (D13).
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
# Test-support gates let FFI smoke tests spin up a real `NmpApp` rather than
# mocking the slot.
nmp-core = { workspace = true, features = ["test-support"] }
nmp-native-runtime = { workspace = true, features = ["test-support"] }
# Temporary directory support for PodcastKeyStore and identity store round-trip tests.
tempfile = "3"
