[package]
name = "podcast-briefings"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Briefing composition + scheduling state machine for the podcast app. Pure data layer — no FFI, no kernel deps, no async, no wall clock."

[lib]
name = "podcast_briefings"

[dependencies]
# Domain types the briefing references (episodes for `BriefingSegment.episode_id`,
# etc.). M9.A keeps the surface narrow — only `EpisodeId` is consumed today;
# `Episode` itself is not pulled in to keep the briefings crate decoupled
# from podcast-core internals beyond the id alias. Wider hookups land in
# M9.B/C as the composer/stitcher need them.
podcast-core = { path = "../podcast-core" }
# Agent-chat domain. The briefing pipeline calls into `podcast-agent-core`
# tools (`generate_briefing`) in M9.B; the M9.A skeleton wires the dep so
# subsequent milestones don't need a Cargo.toml churn.
podcast-agent-core = { path = "../podcast-agent-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
