[package]
name = "podcast-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Domain types and projections for the podcast app. Pure data layer — no FFI, no kernel deps."

[lib]
name = "podcast_core"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
url = { version = "2.0", features = ["serde"] }
