[package]
name = "podcast-feeds"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "RSS streaming parser, Podcasting 2.0 chapters, OPML import/export, and feed refresh policy for the podcast app. Pure parsing/decision logic — no HTTP (that's a capability)."

[lib]
name = "podcast_feeds"

[dependencies]
podcast-core = { path = "../podcast-core" }
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
url = { version = "2.0", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
