[package]
name = "podcast-knowledge"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "RAG-ready knowledge store for podcast transcript chunks. In-memory baseline (LMDB-backed store + capability lands in M6.B); cosine + top-k search for embeddings populated by the STT provider."

[lib]
name = "podcast_knowledge"

[dependencies]
podcast-core = { path = "../podcast-core" }
podcast-transcripts = { path = "../podcast-transcripts" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
